四個畫面切換

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login"></activity>
+        <activity android:name=".Login" />
+        <activity android:name=".NicknameActivity" />
+        <activity android:name=".AgeActivity" />
+        <activity android:name=".GenderActivity"></activity>
     </application>
 
 </manifest>
